@@ -1,18 +1,21 @@
 package com.mobigen.ovp.glossary;
 
+import com.mobigen.ovp.common.constants.Constants;
 import com.mobigen.ovp.common.openmete_client.JsonPatchOperation;
 import com.mobigen.ovp.common.openmete_client.SearchClient;
 import com.mobigen.ovp.common.openmete_client.TablesClient;
-import com.mobigen.ovp.glossary.client.GlossaryClient;
+import com.mobigen.ovp.common.openmete_client.GlossaryClient;
+import com.mobigen.ovp.common.openmete_client.dto.Base;
+import com.mobigen.ovp.common.openmete_client.dto.Tag;
+import com.mobigen.ovp.common.openmete_client.dto.TermDto;
 import com.mobigen.ovp.glossary.client.dto.GlossaryDto;
-import com.mobigen.ovp.glossary.client.dto.TermDto;
-import com.mobigen.ovp.glossary.client.dto.activity.GlossaryActivity;
-import com.mobigen.ovp.glossary.client.dto.common.Tag;
-import com.mobigen.ovp.glossary.client.dto.glossary.Glossary;
-import com.mobigen.ovp.glossary.client.dto.terms.Term;
+import com.mobigen.ovp.common.openmete_client.dto.GlossaryActivity;
+import com.mobigen.ovp.common.openmete_client.dto.Glossary;
+import com.mobigen.ovp.common.openmete_client.dto.Term;
 import com.mobigen.ovp.glossary.client.response.Glossaries;
 import com.mobigen.ovp.glossary.client.response.GlossaryActivities;
 import com.mobigen.ovp.glossary.client.response.Terms;
+import com.mobigen.ovp.search_detail.SearchDetailService;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.http.HttpStatus;
@@ -28,7 +31,6 @@ import java.util.List;
 import java.util.Map;
 import java.util.Optional;
 import java.util.UUID;
-import java.util.stream.Collectors;
 
 @Slf4j
 @Service
@@ -38,24 +40,45 @@ public class GlossaryService {
     private final GlossaryClient glossaryClient;
     private final SearchClient searchClient;
     private final TablesClient tablesClient;
+    private final SearchDetailService searchDetailService;
 
-    public Object createGlossary(GlossaryDto dto) {
-        return glossaryClient.createGlossary(dto);
+    /**
+     * 용어 사전 생성
+     * @param dto
+     * @return
+     * @throws Exception
+     */
+    public Object createGlossary(GlossaryDto dto) throws Exception {
+        ResponseEntity<Object> response = glossaryClient.createGlossary(dto);
+        if(response.getStatusCode() == HttpStatus.OK || response.getStatusCode() == HttpStatus.CREATED) {
+            return response;
+        } else {
+            throw new Exception();
+        }
     }
 
     /**
      * 용어 사전 리스트
      * @return
      */
-    public List<Glossaries> getGlossaries() {
-        String fields = "owner,tags,reviewers,votes,domain";
-        int limit = 100;
-        List<Glossaries> result = new ArrayList<>();
-        List<Glossary> response = glossaryClient.getGlossaries(fields, limit).getData();
-
-        for(Glossary glossary : response) {
-            result.add(new Glossaries(glossary));
+    public Map<String, Object> getGlossaries(String after) {
+        final String FIELDS = "owner,tags,reviewers,votes,domain";
+        MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+        params.add("fields", FIELDS);
+        params.add("limit", "1000");
+        if (after != null && !after.equals("undefined") && !after.isEmpty()) {
+            params.add("after", after);
         }
+        List<Glossaries> glossaries = new ArrayList<>();
+        Base<Glossary> response = glossaryClient.getGlossaries(params);
+
+        if(response != null && response.getData() != null) {
+            glossaries = response.getData().stream().map(Glossaries::new).toList();
+        }
+
+        Map<String, Object> result = new HashMap<>();
+        result.put("data", glossaries);
+        result.put("paging", response.getPaging());
         return result;
     }
 
@@ -74,10 +97,10 @@ public class GlossaryService {
      * @param id
      * @return
      */
-    public int deleteGlossary(UUID id) throws Exception {
-        ResponseEntity<Void> response = glossaryClient.deleteGlossary(id, true, true);
+    public Object deleteGlossary(UUID id) throws Exception {
+        ResponseEntity<Object> response = glossaryClient.deleteGlossary(id, true, true);
         if(response.getStatusCode() == HttpStatus.OK ) {
-            return 1;
+            return response.getBody();
         } else {
             throw new Exception();
         }
@@ -88,8 +111,13 @@ public class GlossaryService {
      * @param dto
      * @return
      */
-    public Object createTerm(TermDto dto) {
-        return glossaryClient.createTerms(dto);
+    public Object createTerm(TermDto dto) throws Exception {
+        ResponseEntity<Object> response = glossaryClient.createTerms(dto);
+        if(response.getStatusCode() == HttpStatus.OK || response.getStatusCode() == HttpStatus.CREATED) {
+            return response;
+        } else {
+            throw new Exception();
+        }
     }
 
     /**
@@ -97,15 +125,21 @@ public class GlossaryService {
      * @param directChildrenOf
      * @return
      */
-    public List<Terms> glossaryTerms(String directChildrenOf) {
+    public Map<String, Object> glossaryTerms(String directChildrenOf, String after) {
         final String FIELDS = "tags,relatedTerms";
-        List<Terms> result = new ArrayList<>();
-        // TODO: 용어 전체를 가져오는건지 아니면 인피니티 스크롤 이용해서 가져오는지에 따라 after 처리를 해야 함.
-        List<Term> response = glossaryClient.getGlossaryTerms(directChildrenOf, FIELDS, 100, "").getData();
-
-        for (Term term : response) {
-            result.add(new Terms(term));
+        MultiValueMap<String, String> params = new LinkedMultiValueMap<>();
+        params.add("directChildrenOf", directChildrenOf);
+        params.add("fields", FIELDS);
+        params.add("limit", "20");
+        if (after != null && !after.equals("undefined") && !after.isEmpty()) {
+            params.add("after", after);
         }
+        Base<Term> response = glossaryClient.getGlossaryTerms(params);
+
+        Map<String, Object> result = new HashMap<>();
+        result.put("terms", response.getData().stream().map(Terms::new).toList());
+        result.put("paging", response.getPaging() != null ? response.getPaging() : null);
+
         return result;
     }
 
@@ -139,10 +173,10 @@ public class GlossaryService {
      * @param id
      * @return
      */
-    public int deleteGlossaryTerm(UUID id) throws Exception {
-        ResponseEntity<Void> response = glossaryClient.deleteGlossaryTerms(id, true, true);
+    public Object deleteGlossaryTerm(UUID id) throws Exception {
+        ResponseEntity<Object> response = glossaryClient.deleteGlossaryTerms(id, true, true);
         if (response.getStatusCode() == HttpStatus.OK) {
-            return 1;
+            return response.getBody();
         } else {
             throw new Exception();
         }
@@ -151,15 +185,46 @@ public class GlossaryService {
     /**
      * 용어 사전 활동 사항
      * @param entityLink
+     * @param after
      * @return
      */
-    public List<GlossaryActivities> getGlossaryActivities(String entityLink) {
-        String type = "Conversation";
-        List<GlossaryActivities> result = new ArrayList<>();
-        List<GlossaryActivity> response = glossaryClient.getGlossaryActivities(entityLink, type).getData();
+    public Map<String, Object> getGlossaryActivities(String entityLink, String after) {
+        final String TYPE = "Conversation";
+        Map<String, Object> result = new HashMap<>();
 
-        for(GlossaryActivity activity : response) {
-            result.add(new GlossaryActivities(activity));
+        Base<GlossaryActivity> response = glossaryClient.getGlossaryActivities(entityLink, after, TYPE);
+
+        List<GlossaryActivities> activities = new ArrayList<>();
+        if (response != null && response.getData() != null) {
+            activities = response.getData().stream()
+                    .map(GlossaryActivities::new)
+                    .toList();
+        }
+        result.put("activities", activities);
+        result.put("paging", response != null ? response.getPaging() : null);
+
+        return result;
+    }
+
+
+    /**
+     * 용어 사전 활동 사항 개수
+     * @param entityLink
+     * @return
+     */
+    public int getGlossaryActivitiesCount(String entityLink) {
+        Map<String, Object> response = glossaryClient.getGlossaryActivitiesCount(entityLink);
+
+        List<Map<String, Object>> data  = (List<Map<String, Object>>) response.get("data");
+        int result = 0;
+
+        if (data != null) {
+            for (Map<String, Object> map : data) {
+                Object countObj = map.get("conversationCount");
+                if (countObj instanceof Number) {
+                    result += ((Number) countObj).intValue();
+                }
+            }
         }
         return result;
     }
@@ -169,38 +234,47 @@ public class GlossaryService {
      * @return
      * @throws Exception
      */
-    public List<Tag> getAllTags() throws Exception {
-        MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
-        queryParams.add("q", "** AND disabled:false");
-        queryParams.add("index", "tag_search_index");
-        queryParams.add("query_filter", "{}");
+    public Object getAllTags() {
+        List<Tag> tags = searchDetailService.getTags(new ArrayList<>(), "", true);
 
-        List<Map<String, ?>> hits = (List<Map<String, ?>>) ((Map<?, ?>) searchClient.getSearchList(queryParams).get("hits")).get("hits");
-        List<Object> source = new ArrayList<>();
-        for(Map<String, ?> data : hits) {
-            source.add(data.get("_source"));
-        }
-        List<Tag> result = new ArrayList<>();
-
-        for(Object obj : source) {
-            if(obj instanceof Map<?,?>) {
-                Map<String, ?> data = (Map<String, ?>) obj;
-                result.add(new Tag(data));
+        return tags.stream().map(tag -> {
+            Map<String, Object> data = new HashMap<>();
+            String displayName = tag.getDisplayName();
+            if (displayName == null || "".equals(displayName)) {
+                displayName = tag.getName();
             }
-        }
-        return result;
+            data.put("name", tag.getName());
+            data.put("displayName", displayName);
+            data.put("description", tag.getDescription());
+            data.put("tagFQN", tag.getFullyQualifiedName());
+            data.put("source", "Classification");
+            data.put("labelType", "Manual");
+            data.put("style", new HashMap<String, Object>());
+            data.put("state", "Confirmed");
+
+            return data;
+        }).toList();
     }
 
     /**
      * 데이터 모델 리스트
-     * @param q
+     * @param search
      * @return
      * @throws Exception
      */
-    public Object getDataModels(String q) throws Exception {
+    public Object getDataModels(String search, String name, String from) throws Exception {
+        String q;
+        if (search != null && !search.isEmpty()) {
+            q = "*" + search + "* AND (tags.tagFQN:\"" + name + "\")";
+        } else {
+            q = "** AND (tags.tagFQN:\"" + name + "\")";
+        }
+
         MultiValueMap<String, String> queryParams = new LinkedMultiValueMap<>();
         queryParams.add("q", q);
         queryParams.add("index", "all");
+        queryParams.add("from", from);
+        queryParams.add("size", "10");
 
         List<Map<String, ?>> hits = (List<Map<String, ?>>) ((Map<?, ?>) searchClient.getSearchList(queryParams).get("hits")).get("hits");
 
@@ -220,16 +294,50 @@ public class GlossaryService {
 
                 if(data.containsKey("owner") && data.get("owner") != null) {
                     Map<String, Object> ownerData = (Map<String, Object>) data.get("owner");
-                    tmp.put("owner", ownerData.get("name"));
+                    tmp.put("owner", ownerData);
+                    tmp.put("ownerDisplayName", ownerData.get("displayName"));
                 }
 
+                String serviceType = Optional.ofNullable(data.get("serviceType"))
+                        .map(Object::toString)
+                        .map(String::toLowerCase)
+                        .orElse("");
+                String serviceIcon = "type-img type-img-" + serviceType;
+                tmp.put("serviceIcon", serviceIcon);
+
                 tmp.put("type", String.valueOf(data.get("tableType")));
-                tmp.put("serviceIcon", "serviceIcon");
-                tmp.put("firModelNm", "firModelNm");
-                tmp.put("category", "category");
+
+                String displayName = (String) data.get("displayName");
+                if (displayName == null || "".equals(displayName)) {
+                    tmp.put("firModelNm", "");
+                } else {
+                    tmp.put("firModelNm", data.get("name"));
+                }
+
+                List<Map<String, Object>> tags = (List<Map<String, Object>>) data.get("tags");
+                List<Map<String, Object>> categoryList = new ArrayList<>();
+
+                if (tags != null && !tags.isEmpty()) {
+                    for (Map<String, Object> tag : tags) {
+                        Object tagFQN = tag.get("tagFQN");
+                        if (tagFQN != null && tagFQN.toString().contains(Constants.OVP_CATEGORY)) {
+                            Map<String, Object> categoryData = new HashMap<>();
+                            categoryData.put("id", tag.get("id"));
+                            categoryData.put("name", tag.get("name"));
+                            categoryData.put("tagDisplayName", tag.get("displayName"));
+                            categoryData.put("tagFQN", tagFQN);
+                            categoryData.put("tagName", tag.get("name"));
+                            categoryData.put("tagDescription", tag.get("description"));
+
+                            categoryList.add(categoryData);
+                        }
+                    }
+                }
+                tmp.put("category", categoryList);
+
                 String fqn = (String) data.get("fullyQualifiedName");
                 tmp.put("fullyQualifiedName", fqn);
-                tmp.put("depth", fqn.split("\\."));
+                tmp.put("depth", fqn.split("(?<!\\\\)\\.(?=(?:[^\"]*\"[^\"]*\")*[^\"]*$)"));
 
                 dataList.add(tmp);
             }
@@ -289,7 +397,7 @@ public class GlossaryService {
                 .orElse(Collections.emptyList())
                 .stream()
                 .map(this::mapToColumn)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     private List<Map<String, Object>> extractTags(Map<String, Object> previewData, String sourceType) {
@@ -298,6 +406,31 @@ public class GlossaryService {
                 .orElse(Collections.emptyList())
                 .stream()
                 .filter(tag -> sourceType.equals(tag.get("source")))
-                .collect(Collectors.toList());
+                .toList();
+    }
+
+    public Boolean addDataModelsTerm(UUID id, Map<String, List<String>> ids) {
+        List<Map<String, String>> assets = ids.entrySet().stream()
+                .flatMap(entry -> entry.getValue().stream()
+                        .map(dataModelId -> {
+                            Map<String, String> item = new HashMap<>();
+                            item.put("id", dataModelId);
+                            item.put("type", entry.getKey().equals("storage") ? "container" : "table");
+                            return item;
+                        }))
+                .toList();
+
+        Map<String, Object> params = Map.of(
+                "assets", assets,
+                "dryRun", false,
+                "glossaryTags", new ArrayList<>()
+        );
+
+        try {
+            glossaryClient.addGlossaryTerm(id, params);
+            return true;
+        } catch (Exception e) {
+            return false;
+        }
     }
 }
